--- a/src/main/resources/templates/usuario/crearUsuario.html
+++ b/src/main/resources/templates/usuario/crearUsuario.html
@@ -17,7 +17,13 @@
                         <h4 class="mb-0">Crear Nuevo Usuario</h4>
                     </div>
                     <div class="card-body">
-                        <form th:action="@{/usuario/save}" method="post">
+                        <form th:action="@{/usuario/save}" method="post" enctype="multipart/form-data">
+                            <!-- Foto de Perfil -->
+                            <div class="mb-3">
+                                <label for="foto" class="form-label">Foto de Perfil</label>
+                                <input type="file" name="foto" class="form-control" id="foto" accept="image/*" />
+                            </div>
+
                             <div class="mb-3">
                                 <label for="usuario" class="form-label">Usuario</label>
                                 <input type="text" name="usuario" class="form-control" id="usuario"
