--- a/src/main/resources/templates/usuario/editarUsuario.html
+++ b/src/main/resources/templates/usuario/editarUsuario.html
@@ -9,59 +9,213 @@
 </head>
 
 <body>
-    <div layout:fragment="content" class="container mt-5">
+    <div layout:fragment="content" class=" ">
         <div class="row justify-content-center">
-            <div class="col-md-8">
-                <div class="card shadow">
-                    <div class="card-header bg-warning text-white">
+            <div th:if="${success}" class="alert alert-success alert-dismissible fade show" role="alert">
+                <span th:text="${success}"></span>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+
+            <div th:if="${error}" class="alert alert-danger alert-dismissible fade show" role="alert">
+                <span th:text="${error}"></span>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <div class="col-md-11 ">
+                <div class=" card shadow row">
+                    <div class="col-md-12 card-header bg-warning text-white">
                         <h4 class="mb-0">Editar Usuario</h4>
                     </div>
-                    <div class="card-body">
-                        <form th:action="@{'/usuario/actualizar/' + ${usuario.idUsuario}}" method="post">
-                            <div class="mb-3">
-                                <label for="usuario" class="form-label">Usuario</label>
-                                <input type="text" class="form-control" id="usuario" name="usuario"
-                                    th:value="${usuario.usuario}" placeholder="Ingrese nombre de usuario" required>
-                            </div>
+                    <div class="row card-body">
+                        <div class="col-md-8">
+                            <form th:action="@{'/usuario/actualizar/' + ${usuario.idUsuario}}" method="post"
+                                enctype="multipart/form-data">
 
-                            <div class="mb-3">
-                                <label for="correo" class="form-label">Correo</label>
-                                <input type="email" class="form-control" id="correo" name="correo"
-                                    th:value="${usuario.correo}" placeholder="usuario@correo.com" required>
-                            </div>
 
-                            <div class="mb-3">
-                                <label for="contrasena" class="form-label">Nueva Contraseña (opcional)</label>
-                                <input type="password" class="form-control" id="contrasena" name="contrasena"
-                                    placeholder="********">
-                            </div>
+                                <!-- Fila con imagen y tarjeta de roles -->
+                                <div class="row mb-3">
+                                    <!-- Foto de perfil -->
+                                    <div class=" text-center">
+                                        <label for="foto" class="form-label d-block">Foto de Perfil</label>
+                                        <img th:src="${usuario.urlFoto != null && !usuario.urlFoto.isEmpty() 
+                                                                                ? usuario.urlFoto 
+                                                                                : '/images/user-default.png'}"
+                                            alt="Foto de Usuario" class="img-fluid rounded-circle border mb-2"
+                                            style="width: 120px; height: 120px; object-fit: cover;">
+                                    </div>
 
+
+
+
+                                </div>
+
+                                <!-- Input de carga de imagen debajo -->
+                                <div class="mb-4">
+                                    <label for="foto" class="form-label">Cambiar Foto de Perfil</label>
+                                    <input type="file" name="foto" class="form-control" id="foto" accept="image/*" />
+                                </div>
+
+
+
+                                <div class="mb-3">
+                                    <label for="usuario" class="form-label">Usuario</label>
+                                    <input type="text" class="form-control" id="usuario" name="usuario"
+                                        th:value="${usuario.usuario}" placeholder="Ingrese nombre de usuario" required>
+                                </div>
+
+                                <div class="mb-3">
+                                    <label for="correo" class="form-label">Correo</label>
+                                    <input type="email" class="form-control" id="correo" name="correo"
+                                        th:value="${usuario.correo}" placeholder="usuario@correo.com" required>
+                                </div>
+
+                                <div class="mb-3">
+                                    <label for="contrasena" class="form-label">Nueva Contraseña (opcional)</label>
+                                    <input type="password" class="form-control" id="contrasena" name="contrasena"
+                                        placeholder="********">
+                                </div>
+
+                                <div class="mb-3">
+                                    <label for="idEstado" class="form-label">Estado</label>
+                                    <select class="form-select" id="idEstado" name="idEstado">
+                                        <option value="1" th:selected="${usuario.idEstado == 1}">Activo</option>
+                                        <option value="0" th:selected="${usuario.idEstado == 0}">Inactivo</option>
+                                    </select>
+                                </div>
+
+                                <div class="text-end">
+                                    <button type="submit" class="btn btn-success">
+                                        <i class="bi bi-arrow-repeat"></i> Actualizar
+                                    </button>
+                                    <a th:href="@{/usuario}" class="btn btn-secondary">
+                                        <i class="bi bi-x-circle"></i> Cancelar
+                                    </a>
+                                </div>
+                            </form>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="card shadow-sm border-0 rounded-4">
+                                <div
+                                    class="card-header bg-light px-4 py-3 d-flex justify-content-between align-items-center">
+                                    <h5 class="mb-0">Roles Asignados</h5>
+                                    <button id="asignarRolModalBtn" class="btn btn-sm btn-primary" type="button">
+                                        <i class="bi bi-plus-circle me-1"></i> Agregar Rol
+                                    </button>
+                                </div>
+                                <div class="card-body px-4 py-3">
+                                    <form th:action="@{/usuarioRol/eliminar}" method="post" id="formEliminarRol"
+                                        onsubmit="return confirm('¿Estás seguro de que deseas eliminar este rol?');">
+                                        <input type="hidden" name="idUsuario" th:value="${usuario.idUsuario}" />
+                                        <input type="hidden" name="idRol" id="idRolSeleccionado" />
+                                        <ul class="list-group mb-3">
+                                            <li th:each="ur : ${rolesA}" class="list-group-item">
+                                                <div class="form-check">
+                                                    <input class="form-check-input" type="radio" name="rolSeleccionado"
+                                                        th:id="'rol-' + ${ur.rol.idRol}" th:value="${ur.rol.idRol}"
+                                                        onchange="mostrarBotonEliminar(this.value)">
+                                                    <label class="form-check-label" th:for="'rol-' + ${ur.rol.idRol}"
+                                                        th:text="${ur.rol.nombreRol}">Rol</label>
+                                                </div>
+                                            </li>
+                                        </ul>
+
+                                        <!-- Contenedor alineado a la derecha -->
+                                        <div class="d-flex justify-content-end">
+                                            <button type="submit" id="btnEliminarRol" class="btn btn-danger d-none">
+                                                <i class="bi bi-trash"></i> Eliminar Rol
+                                            </button>
+                                        </div>
+                                    </form>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+            </div>
+
+        </div>
+
+    </div>
+
+    <div layout:fragment="modal">
+        <div class="modal fade" id="asignarRolModal" tabindex="-1" aria-labelledby="asignarRolModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="asignarRolModalLabel">Asignar Rol al Usuario</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <form th:action="@{/usuarioRol/asignar}" method="post">
+                        <div class="modal-body">
+                            <input type="hidden" name="idUsuario" th:value="${usuario.idUsuario}">
                             <div class="mb-3">
-                                <label for="idEstado" class="form-label">Estado</label>
-                                <select class="form-select" id="idEstado" name="idEstado">
-                                    <option value="1" th:selected="${usuario.idEstado == 1}">Activo</option>
-                                    <option value="0" th:selected="${usuario.idEstado == 0}">Inactivo</option>
+                                <label for="rol" class="form-label">Selecciona un Rol</label>
+                                <select class="form-select" id="rol" name="idRol" required>
+                                    <option value="" disabled selected>Selecciona un rol</option>
+                                    <option th:each="rol : ${listaRoles}" th:value="${rol.idRol}"
+                                        th:text="${rol.nombreRol}"></option>
                                 </select>
                             </div>
-
-                            <div class="text-end">
-                                <button type="submit" class="btn btn-success">
-                                    <i class="bi bi-arrow-repeat"></i> Actualizar
-                                </button>
-                                <a th:href="@{/usuario}" class="btn btn-secondary">
-                                    <i class="bi bi-x-circle"></i> Cancelar
-                                </a>
-                            </div>
-                        </form>
-                    </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                            <button type="submit" class="btn btn-primary">Asignar Rol</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
 
+
     <th:block layout:fragment="js">
-        <!-- Asegúrate de tener Bootstrap Icons si usas los íconos -->
-        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"> -->
+
+
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                var btnAbrirModal = document.getElementById('asignarRolModalBtn');
+                var modalElement = document.getElementById('asignarRolModal');
+
+                if (modalElement) {  // Asegúrate de que el modal exista
+                    var modal = new bootstrap.Modal(modalElement);
+
+                    btnAbrirModal.addEventListener('click', function () {
+                        modalElement.removeAttribute("aria-hidden");  // Eliminar aria-hidden cuando se abre el modal
+                        modal.show();  // Abre el modal
+                    });
+                }
+            });
+
+        </script>
+        <script>
+            function mostrarBotonEliminar(idRol) {
+                document.getElementById("btnEliminarRol").classList.remove("d-none");
+                document.getElementById("idRolSeleccionado").value = idRol;
+            }
+
+            // Detectar clics fuera de los radio buttons para ocultar el botón
+            document.addEventListener('click', function (event) {
+                const rolContainer = document.querySelector('.list-group');
+                const botonEliminar = document.getElementById("btnEliminarRol");
+
+                if (!rolContainer.contains(event.target)) {
+                    // Deseleccionar el radio button seleccionado
+                    const radios = document.getElementsByName("rolSeleccionado");
+                    radios.forEach(radio => radio.checked = false);
+
+                    // Ocultar el botón eliminar
+                    botonEliminar.classList.add("d-none");
+
+
+                }
+            });
+        </script>
+
     </th:block>
 </body>
 
