--- a/src/main/resources/templates/usuario/editarUsuario.html
+++ b/src/main/resources/templates/usuario/editarUsuario.html
@@ -86,7 +86,7 @@
                                     <button type="submit" class="btn btn-success">
                                         <i class="bi bi-arrow-repeat"></i> Actualizar
                                     </button>
-                                    <a th:href="@{/usuario}" class="btn btn-secondary">
+                                    <a th:href="@{'/usuario/ver/' + ${usuario.idUsuario}}" class="btn btn-secondary">
                                         <i class="bi bi-x-circle"></i> Cancelar
                                     </a>
                                 </div>
