add: CRUD proveedor - falta el editar

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -154,6 +154,17 @@
                                 </a>
                             </div>
 
+                            <div class="menu-item">
+                                <a class="menu-link"
+                                    th:class="'menu-link ' + (${active_page} == 'proveedor' ? 'active text-danger' : '')"
+                                    th:href="@{/proveedor}">
+                                    <span class="menu-icon">
+                                        <i class="bi bi-people-fill fs-3"></i> <!-- Ícono cambiado -->
+                                    </span>
+                                    <span class="menu-title">Proveedores</span>
+                                </a>
+                            </div>
+
 
                             <div class="menu-item">
                                 <a class="menu-link"
@@ -533,7 +544,7 @@
                         class="container-fluid d-flex flex-column flex-md-row align-items-center justify-content-between">
                         <!--begin::Copyright-->
                         <div class="text-dark order-2 order-md-1">
-                            <span class="text-muted fw-bold me-1">2021©</span>
+                            <span class="text-muted fw-bold me-1">2025©</span>
                             <a href="" target="_blank" class="text-gray-800 text-hover-primary">Keenthemes</a>
                         </div>
                         <!--end::Copyright-->
